Resolved the report layout issues.

--- a/evado.uniform.webclient/css/client.main.css
+++ b/evado.uniform.webclient/css/client.main.css
@@ -415,24 +415,19 @@ span.required {
   padding: 4px 4px 10px 4px;
   vertical-align: top;
 }
-.field-group .description td 
+
+.field-group .description table {
+  padding: 4px 4px 10px 4px;
+  vertical-align: top;
+}
+
+.field-group .description td, .field-group .description th 
 {
+  width: auto;
   text-align:left;
   padding: 10px;
 }
 
-.substition-table {
-  width: 80%;
-  margin: auto;
-  padding: 10px;
-}
-
-.substition-table td 
-{
-  width: 50%;
-  text-align:left;
-  padding: 10px;
-}
 .field-group .description ul,
 .field-group .description ol,
 .cell-display-text-title ul, 
